# TaitoZ-Amiga

./: .gitignore  LICENSE  README.md
assets/chase_hq/: Chase HQ.info
assets/continental_circus/: Continental Circus.info
chase_hq/: build_host.sh  build_rtg.sh  chq_audio.c  chq_audio_amiga.c  chq_hosttest.c  chq_machine.c  chq_render.c  chq_romdata.S  chq_state.h  make_chq_rtg_bezel.py
chase_hq/amiga/: chq_live_main.c
chase_hq/cores/: z80emu.h
chase_hq/source_v1/: AUDIO_FINDINGS_20260702.md  DYNTRANS_NOTES.md  build.sh  build_covplay.sh  build_dyntrans_report.sh  build_host.sh  build_host_coverage.sh  build_host_m68kgate.sh  build_host_native.sh  build_host_z80cov.sh  cc_audio.c  cc_audio_amiga.c  cc_dyntrans_hw.c  cc_dyntrans_hw.h  cc_hosttest.c  cc_machine.c  cc_render.c  cc_romdata.S  cc_rtg_main.c  chq_covplay.c  chq_extract_roms.py  make_wbpattern_pref.py  patch_workbench_icon_pos.py
chase_hq/source_v1/tools/z80_recompiler/: .gitignore  Cargo.toml
continental_circus/: README.md  build.sh  build_host.sh  build_oracle.sh  cc_aga_main.c  cc_audio.c  cc_audio_amiga.c  cc_cgx.s  cc_extract_roms.py  cc_hosttest.c  cc_machine.c  cc_oracle_render.c  cc_render.c  cc_romdata.S  cc_rtg_main.c  cc_state.h
continental_circus/roms/: README.md
roms/chase_hq/: README.md
roms/continental_circus/: README.md
sci/: README.md  build_host.sh  build_rtg.sh  package_sci_folder.sh  sci_audio.c  sci_audio_amiga.c  sci_extract_roms.py  sci_hosttest.c  sci_machine.c  sci_mathstubs.c  sci_render.c  sci_romdata.S  sci_state.h
shared/: m68kconf.h  z80.c
shared/ym/: fm.h  (+1 more)
(+45 files in other folders)
